Versión con menos Archivos

--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,155 @@ TP5/packages/WebGrease.1.6.0/.signature.p7s
 TP5/packages/WebGrease.1.6.0/lib/WebGrease.dll
 TP5/packages/WebGrease.1.6.0/tools/WG.EXE
 TP5/packages/WebGrease.1.6.0/WebGrease.1.6.0.nupkg
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/VBCSCompiler.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/VBCSCompiler.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/vbc.rsp
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/vbc.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/vbc.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Xml.XPath.XDocument.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Xml.XPath.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Xml.XmlDocument.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Xml.ReaderWriter.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.ValueTuple.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Threading.Tasks.Extensions.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Text.Encoding.CodePages.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Security.Cryptography.X509Certificates.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Security.Cryptography.Primitives.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Security.Cryptography.Encoding.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Security.Cryptography.Algorithms.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Runtime.InteropServices.RuntimeInformation.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Reflection.Metadata.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Net.Sockets.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Net.Http.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.IO.FileSystem.Primitives.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.IO.FileSystem.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.IO.Compression.ZipFile.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.IO.Compression.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Globalization.Calendars.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Diagnostics.StackTrace.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Diagnostics.FileVersionInfo.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Diagnostics.DiagnosticSource.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Console.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.Collections.Immutable.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/System.AppContext.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.Win32.Primitives.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.VisualBasic.Core.targets
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.Managed.Core.targets
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.DiaSymReader.Native.x86.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.DiaSymReader.Native.amd64.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.CSharp.Core.targets
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.CodeAnalysis.VisualBasic.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.CodeAnalysis.Scripting.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.CodeAnalysis.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.CodeAnalysis.CSharp.Scripting.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.CodeAnalysis.CSharp.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/Microsoft.Build.Tasks.CodeAnalysis.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/csi.rsp
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/csi.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/csi.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/csc.rsp
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/csc.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/RoslynLatest/csc.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/VBCSCompiler.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/VBCSCompiler.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/vbc.rsp
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/vbc.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/vbc.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/System.Reflection.Metadata.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/System.IO.FileSystem.Primitives.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/System.IO.FileSystem.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/System.Diagnostics.StackTrace.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/System.Collections.Immutable.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/System.AppContext.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.VisualBasic.Core.targets
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.DiaSymReader.Native.x86.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.DiaSymReader.Native.amd64.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.CSharp.Core.targets
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.CodeAnalysis.VisualBasic.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.CodeAnalysis.Scripting.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.CodeAnalysis.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.CodeAnalysis.CSharp.Scripting.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.CodeAnalysis.CSharp.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/Microsoft.Build.Tasks.CodeAnalysis.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/csi.rsp
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/csi.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/csc.rsp
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/csc.exe.config
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/Roslyn45/csc.exe
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/net45/uninstall.ps1
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/tools/net45/install.ps1
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1.nupkg
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/lib/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/lib/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net46/web.config.uninstall.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net46/web.config.install.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net46/app.config.uninstall.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net46/app.config.install.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net45/web.config.uninstall.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net45/web.config.install.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net45/app.config.uninstall.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/content/net45/app.config.install.xdt
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/build/net46/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/build/net46/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.Extensions.props
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/build/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/build/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.Extensions.props
+TP5_Grupo_Nro_13/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1/.signature.p7s
+TP5_Grupo_Nro_13/obj/Debug/TP5_Grupo_Nro_13.pdb
+TP5_Grupo_Nro_13/obj/Debug/TP5_Grupo_Nro_13.dll
+TP5_Grupo_Nro_13/obj/Debug/TP5_Grupo_Nro_13.csproj.FileListAbsolute.txt
+TP5_Grupo_Nro_13/obj/Debug/TP5_Grupo_Nro_13.csproj.CoreCompileInputs.cache
+TP5_Grupo_Nro_13/obj/Debug/TP5_Grupo_Nro_13.csproj.AssemblyReference.cache
+TP5_Grupo_Nro_13/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+TP5_Grupo_Nro_13/obj/Debug/.NETFramework,Version=v4.7.2.AssemblyAttributes.cs
+TP5_Grupo_Nro_13/bin/TP5_Grupo_Nro_13.dll
+TP5_Grupo_Nro_13/bin/TP5_Grupo_Nro_13.dll.config
+TP5_Grupo_Nro_13/bin/TP5_Grupo_Nro_13.pdb
+TP5_Grupo_Nro_13/bin/roslyn/VBCSCompiler.exe.config
+TP5_Grupo_Nro_13/bin/roslyn/VBCSCompiler.exe
+TP5_Grupo_Nro_13/bin/roslyn/vbc.rsp
+TP5_Grupo_Nro_13/bin/roslyn/vbc.exe.config
+TP5_Grupo_Nro_13/bin/roslyn/System.Text.Encoding.CodePages.dll
+TP5_Grupo_Nro_13/bin/roslyn/vbc.exe
+TP5_Grupo_Nro_13/bin/roslyn/System.Xml.XPath.XDocument.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Xml.XPath.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Xml.XmlDocument.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Xml.ReaderWriter.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.ValueTuple.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Threading.Tasks.Extensions.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Security.Cryptography.X509Certificates.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Security.Cryptography.Primitives.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Security.Cryptography.Encoding.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Security.Cryptography.Algorithms.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Reflection.Metadata.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Runtime.InteropServices.RuntimeInformation.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Net.Sockets.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Net.Http.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.IO.FileSystem.Primitives.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.IO.FileSystem.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.IO.Compression.ZipFile.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.IO.Compression.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Globalization.Calendars.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Diagnostics.StackTrace.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Diagnostics.FileVersionInfo.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Diagnostics.DiagnosticSource.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Console.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.Collections.Immutable.dll
+TP5_Grupo_Nro_13/bin/roslyn/System.AppContext.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.Win32.Primitives.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.VisualBasic.Core.targets
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.Managed.Core.targets
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.DiaSymReader.Native.x86.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.DiaSymReader.Native.amd64.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.CSharp.Core.targets
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.CodeAnalysis.VisualBasic.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.CodeAnalysis.Scripting.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.CodeAnalysis.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.CodeAnalysis.CSharp.Scripting.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.CodeAnalysis.CSharp.dll
+TP5_Grupo_Nro_13/bin/roslyn/Microsoft.Build.Tasks.CodeAnalysis.dll
+TP5_Grupo_Nro_13/bin/roslyn/csi.rsp
+TP5_Grupo_Nro_13/bin/roslyn/csi.exe.config
+TP5_Grupo_Nro_13/bin/roslyn/csc.rsp
+TP5_Grupo_Nro_13/bin/roslyn/csi.exe
+TP5_Grupo_Nro_13/bin/roslyn/csc.exe.config
+TP5_Grupo_Nro_13/bin/roslyn/csc.exe
