--- a/.gitignore
+++ b/.gitignore
@@ -481,3 +481,5 @@ TP5_Grupo_Nro_13/bin/roslyn/csc.rsp
 TP5_Grupo_Nro_13/bin/roslyn/csi.exe
 TP5_Grupo_Nro_13/bin/roslyn/csc.exe.config
 TP5_Grupo_Nro_13/bin/roslyn/csc.exe
+TP5_Grupo_Nro_13/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
+TP5_Grupo_Nro_13/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
