--- a/principalForm/principalForm/TP6.csproj
+++ b/principalForm/principalForm/TP6.csproj
@@ -75,6 +75,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcessoDatos.cs" />
     <Compile Include="formEjercicio1.aspx.cs">
       <DependentUpon>formEjercicio1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -89,6 +90,7 @@
     <Compile Include="formEjercicio2.aspx.designer.cs">
       <DependentUpon>formEjercicio2.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Metodos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="inicio.aspx.cs">
       <DependentUpon>inicio.aspx</DependentUpon>
