--- a/principalForm/principalForm/TP6.csproj
+++ b/principalForm/principalForm/TP6.csproj
@@ -91,6 +91,7 @@
       <DependentUpon>formEjercicio2.aspx</DependentUpon>
     </Compile>
     <Compile Include="Metodos.cs" />
+    <Compile Include="Productos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="inicio.aspx.cs">
       <DependentUpon>inicio.aspx</DependentUpon>
