parte visual seleccionar productos

--- a/principalForm/principalForm/TP6.csproj
+++ b/principalForm/principalForm/TP6.csproj
@@ -68,10 +68,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="formEjercicio1.aspx" />
-    <Content Include="formEjercicio2.aspx" />
+    <Content Include="InicioEj2.aspx" />
     <Content Include="SeleccionarProductos.aspx" />
     <Content Include="Web.config" />
-    <Content Include="inicio.aspx">
+    <Content Include="inicioEj1.aspx">
       <BrowseToURL>~/formEjercicio1.aspx</BrowseToURL>
     </Content>
     <Content Include="MostrarProductos.aspx" />
@@ -85,22 +85,22 @@
     <Compile Include="formEjercicio1.aspx.designer.cs">
       <DependentUpon>formEjercicio1.aspx</DependentUpon>
     </Compile>
-    <Compile Include="formEjercicio2.aspx.cs">
-      <DependentUpon>formEjercicio2.aspx</DependentUpon>
+    <Compile Include="InicioEj2.aspx.cs">
+      <DependentUpon>InicioEj2.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="formEjercicio2.aspx.designer.cs">
-      <DependentUpon>formEjercicio2.aspx</DependentUpon>
+    <Compile Include="InicioEj2.aspx.designer.cs">
+      <DependentUpon>InicioEj2.aspx</DependentUpon>
     </Compile>
     <Compile Include="Metodos.cs" />
     <Compile Include="Productos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="inicio.aspx.cs">
-      <DependentUpon>inicio.aspx</DependentUpon>
+    <Compile Include="inicioEj1.aspx.cs">
+      <DependentUpon>inicioEj1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="inicio.aspx.designer.cs">
-      <DependentUpon>inicio.aspx</DependentUpon>
+    <Compile Include="inicioEj1.aspx.designer.cs">
+      <DependentUpon>inicioEj1.aspx</DependentUpon>
     </Compile>
     <Compile Include="SeleccionarProductos.aspx.cs">
       <DependentUpon>SeleccionarProductos.aspx</DependentUpon>
