Visual Mostrar Sucursales

--- a/TP7_Grupo_Nro_06/TP7_Grupo_Nro_06.csproj
+++ b/TP7_Grupo_Nro_06/TP7_Grupo_Nro_06.csproj
@@ -80,10 +80,18 @@
     <Content Include="Imagenes\7.jpg" />
     <Content Include="Imagenes\8.jpg" />
     <Content Include="Imagenes\9.jpg" />
+    <Content Include="MostrarSucursales.aspx" />
     <Content Include="SeleccionarSucursales.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MostrarSucursales.aspx.cs">
+      <DependentUpon>MostrarSucursales.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MostrarSucursales.aspx.designer.cs">
+      <DependentUpon>MostrarSucursales.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeleccionarSucursales.aspx.cs">
       <DependentUpon>SeleccionarSucursales.aspx</DependentUpon>
