seleccionar avanzado pero sin finalizar

--- a/TP7_Grupo_Nro_06/TP7_Grupo_Nro_06.csproj
+++ b/TP7_Grupo_Nro_06/TP7_Grupo_Nro_06.csproj
@@ -85,6 +85,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="gestionSucursales.cs" />
+    <Compile Include="Metodos.cs" />
     <Compile Include="MostrarSucursales.aspx.cs">
       <DependentUpon>MostrarSucursales.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
