TP8: Clase Sucursal y Referencias

--- a/TP8_Grupo_06/Datos/Datos.csproj
+++ b/TP8_Grupo_06/Datos/Datos.csproj
@@ -43,5 +43,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{5315db10-bdbf-4f32-ae25-41da5c1a396d}</Project>
+      <Name>Entidades</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
