agregar Sucursal pero en capaz

--- a/TP8_Grupo_06/Datos/Datos.csproj
+++ b/TP8_Grupo_06/Datos/Datos.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Conexion.cs" />
+    <Compile Include="accesoDatos.cs" />
+    <Compile Include="datosSucursal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
