--- a/TP8_Grupo_06/Negocio/Negocio.csproj
+++ b/TP8_Grupo_06/Negocio/Negocio.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="gestorSucursales.cs" />
+    <Compile Include="negocioSucursales.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
