--- a/TP8_Grupo_06/Datos/Datos.csproj
+++ b/TP8_Grupo_06/Datos/Datos.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="accesoDatos.cs" />
+    <Compile Include="datosProvincia.cs" />
     <Compile Include="datosSucursal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
