Fondo con Imagen Registro

--- a/Integrador_Grupo6/Vistas/Vistas.csproj
+++ b/Integrador_Grupo6/Vistas/Vistas.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Imagenes\images.jpg" />
     <Content Include="IniciarSesion.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
