--- a/Integrador_Grupo6/Vistas/Vistas.csproj
+++ b/Integrador_Grupo6/Vistas/Vistas.csproj
@@ -67,7 +67,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Imagenes\Iconos\carrito.png" />
+    <Content Include="Imagenes\Productos\AuricularesInalambricosNoblex.jpg" />
+    <Content Include="Imagenes\Productos\JoystickPlay4.jpg" />
+    <Content Include="Imagenes\Productos\NotebookLenovo.jpg" />
+    <Content Include="Imagenes\Productos\RealidadVirtual.jpg" />
     <Content Include="iniciarSesion.aspx" />
+    <Content Include="Inicio.aspx" />
     <Content Include="registrarse.aspx" />
     <Content Include="StyleSheet.css" />
     <Content Include="Web.config" />
@@ -79,6 +85,13 @@
     </Compile>
     <Compile Include="iniciarSesion.aspx.designer.cs">
       <DependentUpon>iniciarSesion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Inicio.aspx.cs">
+      <DependentUpon>Inicio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inicio.aspx.designer.cs">
+      <DependentUpon>Inicio.aspx</DependentUpon>
     </Compile>
     <Compile Include="registrarse.aspx.cs">
       <DependentUpon>registrarse.aspx</DependentUpon>
@@ -98,9 +111,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Imagenes\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
