--- a/Integrador_Grupo6/Dao/Dao.csproj
+++ b/Integrador_Grupo6/Dao/Dao.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="DAOcategoria.cs" />
+    <Compile Include="DAOcolor.cs" />
+    <Compile Include="DAOmarcas.cs" />
     <Compile Include="DAOproductos.cs" />
     <Compile Include="DAOusuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
