--- a/Integrador_Grupo6/Negocio/Negocio.csproj
+++ b/Integrador_Grupo6/Negocio/Negocio.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NegocioCaracteristica.cs" />
+    <Compile Include="NegocioCaracteristicasXproductosXcolores.cs" />
     <Compile Include="NegocioCategorias.cs" />
     <Compile Include="NegocioColores.cs" />
     <Compile Include="NegocioDetalleFactura.cs" />
